# Tabungan

./: .env.example  .gitignore  README.md  biome.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vercel.json
contracts/: Cargo.toml  DEPLOYMENT.md  Makefile  deploy.err
contracts/family-vault/: Cargo.toml
contracts/family-vault/src/: error.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/family-vault/test_snapshots/test/: allowance_across_two_recipients_respects_balance.1.json  cannot_initialize_twice.1.json  claim_over_allowance_is_rejected.1.json  claim_without_vault_is_rejected.1.json  deposit_escrows_funds_and_tracks_balance.1.json  deposit_zero_or_negative_is_rejected.1.json  lowering_allowance_frees_unallocated.1.json  pause_blocks_deposit_and_claim_but_not_withdraw.1.json  set_allowance_and_claim_happy_path.1.json  set_allowance_over_balance_is_rejected.1.json  test_initialize.1.json  withdraw_unallocated_returns_funds.1.json
contracts/scripts/: deploy.sh
docs/: ARCHITECTURE.md
scripts/: reset-db.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/stats/: page.tsx
src/server/config/: env.ts  stellar.ts
src/server/lib/: auth-guard.ts  cookies.ts  http.ts  validators.ts
src/server/service/: auth.service.ts  recipient.service.ts  stats.service.ts  vault.service.ts
src/server/stellar/: amounts.ts  index.ts  network.ts  vault.ts
src/ui/components/: brand.tsx  dashboard.tsx  home.tsx  landing.tsx  site-footer.tsx  site-header.tsx  ui.tsx  (+2 more)
tests/: setup.ts
tests/e2e/: prod-real.spec.ts
tests/unit/: lib.test.ts
(+23 files in other folders)
