[workspace]
resolver = "2"
members = ["family-vault"]

# Tuned for a small, deterministic on-chain Wasm. `overflow-checks = true` is
# deliberate: arithmetic on XLM amounts must trap, never silently wrap.
[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
